Added OAuth Functionality with Authenticate.js to check if someone is logged in or not
