# routes/index.js
@@ -1,13 +1,29 @@
 const router = require('express').Router()
+const passport = require('passport')
 
 router.use('/', require('./swagger'));
-
-router.get('/', (req, res) => {
-    res.send("Hello World");
-});
 
 router.use('/cds', require('./cd'))
 router.use('/books', require('./books'));
 router.use('/users', require('./users'));
+
+//OAuth Login and Logout enpoints.
+router.get('/login', passport.authenticate('github'), (req, res) => { });
+router.get('/logout', function (req, res, next) {
+    req.logout(function (err) {
+        if (err) {
+            return next(err);
+        }
+        res.redirect('/');
+    });
+});
+
+router.get('/debug', (req, res) => {
+    res.json({
+        user: req.user,
+        session: req.session
+    });
+});
+
 
 module.exports = router;
